--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <span>&copy; 2020 Mesto Russia</span>
   </footer>
   <template id="popup">
-    <div class="popup smooth">
+    <div class="popup fade fade_type_in">
       <div class="popup__container">
         <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn" id="closeBtn"></button>
         <h3 class="popup__title"></h3>
@@ -45,8 +45,17 @@
       </div>
     </div>
   </template>
+  <template id="image-popup">
+    <div class="image-popup fade fade_type_in">
+      <div class="image-popup__container">
+        <img class="image-popup__image" src="" alt="">
+        <h3 class="image-popup__text"></h3>
+        <button type="button" class="image-popup__close-btn button" value="Закрыть" name="close-btn" id="imageCloseBtn"></button>
+      </div>
+    </div>
+  </template>
   <template id="card">
-    <article class="element smooth">
+    <article class="element fade fade_type_in">
       <img class="element__image" src="" alt="">
       <div class="element__info">
         <h2 class="element__title"></h2>
