--- a/index.html
+++ b/index.html
@@ -7,63 +7,64 @@
   <title>Проект: Место</title>
 </head>
 <body class="page">
-  <header class="header">
-    <div class="header__logo"></div>
-  </header>
-  <main class="content">
-    <section class="profile">
-      <div class="profile__item">
-        <img class="profile__avatar" src="images/kusto.png" alt="Аватар">
-        <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__occupation">Исследователь океана</p>
-          <button type="button" class="profile__edit-btn button" value="Изменить" name="edit-btn"></button>
-        </div>
-      </div>
-      <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn"></button>
-    </section>
-    <section class="elements"></section>
-  </main>
-  <footer class="footer">
-    <span>&copy; 2020 Mesto Russia</span>
-  </footer>
-  <template id="popup">
-    <div class="popup fade fade_type_in">
-      <div class="popup__container">
-        <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn" id="closeBtn"></button>
-        <h3 class="popup__title"></h3>
-        <form class="popup__form" name="popup">
-          <input type="text" class="popup__field" id="name" placeholder="" required
-                 name="profile-name">
-          <input type="text" class="popup__field" id="source" placeholder=""
-                 required
-                 name="profile-source">
-          <button type="submit" class="popup__save-btn button" value="Сохранить"
-                  name="save-btn" id="saveBtn">Сохранить
-          </button>
-        </form>
+<header class="header">
+  <div class="header__logo"></div>
+</header>
+<main class="content">
+  <section class="profile">
+    <div class="profile__item">
+      <img class="profile__avatar" src="images/kusto.png" alt="Аватар">
+      <div class="profile__info">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <p class="profile__occupation">Исследователь океана</p>
+        <button type="button" class="profile__edit-btn button" value="Изменить" name="edit-btn"></button>
       </div>
     </div>
-  </template>
-  <template id="image-popup">
-    <div class="image-popup fade fade_type_in">
-      <div class="image-popup__container">
-        <img class="image-popup__image" src="" alt="">
-        <h3 class="image-popup__text"></h3>
-        <button type="button" class="image-popup__close-btn button" value="Закрыть" name="close-btn" id="imageCloseBtn"></button>
-      </div>
+    <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn"></button>
+  </section>
+  <section class="elements"></section>
+</main>
+<footer class="footer">
+  <span>&copy; 2020 Mesto Russia</span>
+</footer>
+<template id="popup">
+  <div class="popup fade fade_type_in">
+    <div class="popup__container">
+      <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn" id="closeBtn"></button>
+      <h3 class="popup__title"></h3>
+      <form class="popup__form" name="popup">
+        <input type="text" class="popup__field" id="name" placeholder="" required
+               name="profile-name">
+        <input type="text" class="popup__field" id="source" placeholder=""
+               required
+               name="profile-source">
+        <button type="submit" class="popup__save-btn button" value="Сохранить"
+                name="save-btn" id="saveBtn">Сохранить
+        </button>
+      </form>
     </div>
-  </template>
-  <template id="card">
-    <article class="element fade fade_type_in">
-      <img class="element__image" src="" alt="">
-      <div class="element__info">
-        <h2 class="element__title"></h2>
-        <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-      </div>
-      <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
-    </article>
-  </template>
-  <script src="script/index.js"></script>
+  </div>
+</template>
+<template id="image-popup">
+  <div class="image-popup fade fade_type_in">
+    <div class="image-popup__container">
+      <img class="image-popup__image" src="" alt="">
+      <h3 class="image-popup__text"></h3>
+      <button type="button" class="image-popup__close-btn button" value="Закрыть" name="close-btn"
+              id="imageCloseBtn"></button>
+    </div>
+  </div>
+</template>
+<template id="card">
+  <article class="element fade fade_type_in">
+    <img class="element__image" src="" alt="">
+    <div class="element__info">
+      <h2 class="element__title"></h2>
+      <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+    </div>
+    <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
+  </article>
+</template>
+<script src="script/index.js"></script>
 </body>
 </html>
