--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button type="button" class="popup__close-btn button" value="Закрыть" name="profile-close-btn"
             id="profileFormCloseBtn"></button>
     <h3 class="popup__title">Редактировать профиль</h3>
-    <form class="popup__form" name="popup" novalidate>
+    <form class="popup__form" name="profile-popup" novalidate>
       <fieldset class="popup__field-set">
         <label class="popup__label">
           <input type="text" class="popup__field" id="profile-name" placeholder="Имя" required
@@ -98,7 +98,7 @@
     <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
   </article>
 </template>
-<script src="script/index.js"></script>
 <script src="script/validate.js"></script>
+<script src="script/index.js"></script>
 </body>
 </html>
