--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
   </article>
 </template>
-<script src="script/cards.js"></script>
-<script src="script/validate.js"></script>
-<script src="script/index.js"></script>
+<script type="module" src="script/index.js"></script>
+<script type="module" src="script/FormValidator.js"></script>
+<script type="module" src="script/Card.js"></script>
 </body>
 </html>
