--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" property="stylesheet" href="pages/index.css">
+<!--  <link rel="stylesheet" property="stylesheet" href="./index.css">-->
   <title>Проект: Место</title>
 </head>
 <body class="page">
@@ -13,7 +13,7 @@
 <main class="content">
   <section class="profile">
     <div class="profile__item">
-      <img class="profile__avatar" src="images/kusto.png" alt="Аватар">
+      <img class="profile__avatar" src="<%=require('../images/kusto.png')%>" alt="Аватар">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__occupation">Исследователь океана</p>
@@ -81,7 +81,7 @@
 </div>
 <div class="popup popup_type_image">
   <div class="popup__container popup__container_type_image">
-    <img class="popup__image" src="images/element-template.png" alt="template">
+    <img class="popup__image" src="<%=require('../images/element-template.png')%>" alt="template">
     <h3 class="popup__text"></h3>
     <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn"
             id="imageCloseBtn"></button>
@@ -90,7 +90,7 @@
 
 <template id="card">
   <article class="element fade fade_type_in">
-    <img class="element__image" src="images/element-template.png" alt="template">
+    <img class="element__image" src="<%=require('../images/element-template.png')%>" alt="template">
     <div class="element__info">
       <h2 class="element__title"></h2>
       <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
@@ -98,9 +98,6 @@
     <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
   </article>
 </template>
-<script type="module" src="script/index.js"></script>
-<script type="module" src="script/FormValidator.js"></script>
-<script type="module" src="script/Card.js"></script>
-<script type="module" src="script/cardsInfo.js"></script>
+<!--<script type="module" src="./index.js"></script>-->
 </body>
 </html>
