--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <main class="content">
   <section class="profile">
     <div class="profile__item">
-      <img class="profile__avatar" src="<%=require('../images/kusto.png')%>" alt="Аватар">
+      <img class="profile__avatar" src="<%=require('./images/kusto.png')%>" alt="Аватар">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__occupation">Исследователь океана</p>
@@ -81,7 +81,7 @@
 </div>
 <div class="popup popup_type_image">
   <div class="popup__container popup__container_type_image">
-    <img class="popup__image" src="<%=require('../images/element-template.png')%>" alt="template">
+    <img class="popup__image" src="<%=require('./images/element-template.png')%>" alt="template">
     <h3 class="popup__text"></h3>
     <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn"
             id="imageCloseBtn"></button>
@@ -90,7 +90,7 @@
 
 <template id="card">
   <article class="element fade fade_type_in">
-    <img class="element__image" src="<%=require('../images/element-template.png')%>" alt="template">
+    <img class="element__image" src="<%=require('./images/element-template.png')%>" alt="template">
     <div class="element__info">
       <h2 class="element__title"></h2>
       <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
