--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--  <link rel="stylesheet" property="stylesheet" href="./index.css">-->
+<!--  <link rel="stylesheet" property="stylesheet" href="./pages/index.css">-->
   <title>Проект: Место</title>
 </head>
 <body class="page">
@@ -98,6 +98,6 @@
     <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
   </article>
 </template>
-<!--<script type="module" src="./index.js"></script>-->
+<!--<script type="module" src="./pages/index.js"></script>-->
 </body>
 </html>
