--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--  <link rel="stylesheet" property="stylesheet" href="./pages/index.css">-->
+  <!--  <link rel="stylesheet" property="stylesheet" href="./pages/index.css">-->
   <title>Проект: Место</title>
 </head>
 <body class="page">
@@ -13,7 +13,7 @@
 <main class="content">
   <section class="profile">
     <div class="profile__item">
-      <img class="profile__avatar" src="<%=require('./images/kusto.png')%>" alt="Аватар">
+      <button type="button" class="profile__avatar-btn" value="Изменить" name="avatar-btn" id="avatarEditBtn"></button>
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__occupation">Исследователь океана</p>
@@ -28,6 +28,19 @@
 <footer class="footer">
   <span>&copy; 2020 Mesto Russia</span>
 </footer>
+
+<div class="popup popup_type_delete-card">
+  <div class="popup__container popup__container_type_form">
+    <button type="button" class="popup__close-btn button" value="Закрыть" name="delete-card-close-btn"
+            id="deleteCardPopupCloseBtn"></button>
+    <h3 class="popup__title">Вы уверены?</h3>
+    <form class="popup__form" name="profile-popup" novalidate>
+      <button type="submit" class="popup__save-btn button" value="Да"
+              name="profile-save-btn" id="deleteCardPopupSaveBtn">Да
+      </button>
+    </form>
+  </div>
+</div>
 
 <div class="popup popup_type_profile">
   <div class="popup__container popup__container_type_form">
@@ -55,15 +68,23 @@
   </div>
 </div>
 
-<div class="popup popup_type_delete-card">
+<div class="popup popup_type_avatar">
   <div class="popup__container popup__container_type_form">
-    <button type="button" class="popup__close-btn button" value="Закрыть" name="delete-card-close-btn"
-            id="deleteCardPopupCloseBtn"></button>
-    <h3 class="popup__title">Вы уверены?</h3>
+    <button type="button" class="popup__close-btn button" value="Закрыть" name="avatar-close-btn"
+            id="avatarCloseBtn"></button>
+    <h3 class="popup__title">Обновить аватар</h3>
     <form class="popup__form" name="profile-popup" novalidate>
-        <button type="submit" class="popup__save-btn button" value="Да"
-                name="profile-save-btn" id="deleteCardPopupSaveBtn">Да
-        </button>
+      <fieldset class="popup__field-set">
+        <label class="popup__label">
+          <input type="url" class="popup__field" id="avatarSource" placeholder="Ссылка на картинку"
+                 required
+                 name="avatar-source">
+          <span class="popup__field-error avatarSource-error"></span>
+        </label>
+      </fieldset>
+      <button type="submit" class="popup__save-btn button" value="Сохранить"
+              name="avatar-save-btn" id="avatarSaveBtn">Сохранить
+      </button>
     </form>
   </div>
 </div>
@@ -93,6 +114,7 @@
     </form>
   </div>
 </div>
+
 <div class="popup popup_type_image">
   <div class="popup__container popup__container_type_image">
     <img class="popup__image" src="<%=require('./images/element-template.png')%>" alt="template">
